--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   mask_text_input_formatter: ^2.5.0
+  image_picker: ^1.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
