--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.2.2
   mask_text_input_formatter: ^2.5.0
   image_picker: ^1.0.4
   url_launcher: ^6.2.1
